fix website issue with overflowing

--- a/mw-custom.scss
+++ b/mw-custom.scss
@@ -27,7 +27,7 @@ $font-family-sans-serif: 'Josefin Sans', sans-serif;
 $font-family-smallcaps: 'Playfair Display SC', serif;
 
 
-$font-size-root: 20px;
+//$font-size-root: 20px;
 
 $link-color: $mw-color;
 
